--- a/Prode/frontend/prode-app/assets/resultados/style.css
+++ b/Prode/frontend/prode-app/assets/resultados/style.css
@@ -1,10 +1,65 @@
+
 .table
 {
-    text-align: center; 
-    vertical-align: middle;
+  
+  width:100%;
+  font-size:1em;
+    zoom: 1.0;
+    text-align: center;
+    font-style: italic;
+    -ms-text-combine-horizontal: all;
+   
     color: aliceblue;
     background-color: #601e1e;
+   
     
+}
+.container{
+  position: absolute;
+  left: 100cm;
+  margin-left: 50%;
+  margin-right: 50%;
+}
+#jornada1{
+  
+  display: block;
+  top: 0cm;
+  left: 10cm;
+}
+
+#jornada2{
+  display: block;
+  position: absolute;
+  top: 0cm;
+  left: 70%;
+}
+#jornada3{
+  position: absolute;
+ left: 39%;
+  
+}
+#boton-prode{
+
+  position: absolute;
+  margin-left: 39%;
+  top: 110cm;
+}
+
+
+
+.prueba1{
+  
+  position: absolute;
+  margin-left: auto;
+  margin-right: auto;
+  
+  text-align: center;
+  font-style: italic;
+  
+  
+  color: aliceblue;
+  background-color: #601e1e;
+  
 }
 
 
@@ -16,6 +71,7 @@ color: aliceblue;
 
 }
 body{
+  
     background-color: #601e1e;
     overflow: visible;
     
@@ -79,7 +135,7 @@ input[type=number] {
 .table-wrapper{
   margin: 10px 70px 70px;
   color: aliceblue;
-  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
+  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.5 );
 }
 
 .fl-table {
@@ -125,6 +181,9 @@ input[type=number] {
   .fl-table {
       display: block;
       width: 100%;
+      
+      
+      
   }
   .table-wrapper:before{
       content: "Scroll horizontally >";
@@ -159,6 +218,8 @@ input[type=number] {
       width: 120px;
       font-size: 13px;
       text-overflow: ellipsis;
+      
+      
   }
   .fl-table thead th {
       text-align: left;
@@ -188,4 +249,44 @@ input[type=number] {
 }
 
 
+.imagenes-fixture{
+  /*
+position: absolute;
+margin: auto;
+width: auto;
+left: 50%;
+display: block;
+*/
+display: flex;
+  justify-content: center;
+  z-index: 3;
 
+}
+
+
+#boton-registro{
+
+  margin-left: 0%;
+}
+
+#registro-input{
+
+  display: block;
+  margin-top: 9%;
+  padding-left: 60%;
+  width: 90%;
+}
+#registro-image{
+  position: fixed;
+  
+  margin-left: 0%;
+  top: 20%;
+  margin-top: 0%;
+
+}
+
+
+#texto-resultados{
+  
+  padding-left: 5%;
+}
