Tabla de prueba final

--- a/Prode/frontend/prode-app/estilos1.css
+++ b/Prode/frontend/prode-app/estilos1.css
@@ -1,5 +1,9 @@
-.bright {
-    color: orange;
-    font-family: Avenir;
-  }
-  
+
+table, th , td , tr {border: 1px solid black;}
+table ,th , td , tr {text-align:  center;}
+table {background-color: rgb(160, 21, 21);}
+body {background-color: green}
+td{font-style:arial ;}
+td{font-size: 3;}  
+.bolded { font-weight: bold }
+th { size: 400px;}
