--- a/Prode/frontend/prode-app/estilos1.css
+++ b/Prode/frontend/prode-app/estilos1.css
@@ -1,5 +1,5 @@
 
-table, th , td , tr {border: 1px solid black;}
+table, th , td , tr {border: 1px solid black; border-radius: 0px !important;}
 table ,th , td , tr {text-align:  center;}
 table {background-color: rgb(160, 21, 21);}
 body {background-color: green}
