--- a/Prode/frontend/prode-app/assets/resultados/style.css
+++ b/Prode/frontend/prode-app/assets/resultados/style.css
@@ -257,9 +257,11 @@ width: auto;
 left: 50%;
 display: block;
 */
-display: flex;
+  display: flex;
   justify-content: center;
   z-index: 3;
+  margin-left: auto;
+  margin-right: auto;
 
 }
 
@@ -289,4 +291,85 @@ display: flex;
 #texto-resultados{
   
   padding-left: 5%;
+}
+
+/* Preguntas frecuentes */
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+  background-color:#212529;
+ 
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 60%;
+  text-align: left;
+  border: none;
+  outline: none;
+  transition: 0.4s;
+  margin-top: 1%;
+  margin-left: 20%;
+  
+}
+
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+  background-color: #212529;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+  padding: 0 18px;
+  background-color: rgb(200, 200, 200);
+  
+  display: none;
+  width: 60%;
+  overflow: hidden;
+  
+  margin-left: 20%;
+}
+p{
+  margin-top: 2%;
+
+}
+/* Pago */
+
+.pago-imagen{
+  
+  position: fixed;
+  top: 20%;
+  left: 5%;
+  width: 40%;
+  z-index:-1;
+  
+}
+.pago-texto{
+  position: fixed;
+  top: 40%;
+  left: 8%;
+  font-size: 120%;
+  width:15% ;
+  color: white;
+  background-color: black;
+ /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px, rgb(0, 0, 0) 0px 0px 0px 2px;*/
+ box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  z-index: 1;
+}
+
+.qr-pago{
+
+  position: fixed;
+  top: 50%;
+  left: 20%;
+ 
+  z-index:1;
+  
+
+}
+.pago-valor{
+  position: fixed;
+  top: 75%;
+  left: 17%;
+  color: lightgray;
+  font-size: 100%;
 }
