--- a/Prode/frontend/prode-app/assets/resultados/style.css
+++ b/Prode/frontend/prode-app/assets/resultados/style.css
@@ -1,3 +1,14 @@
+/* Para el hover de navbar */
+a> :hover,a:hover{
+  background-color: #b3b3b3;
+  color: #FFC0CB;
+}
+#active{
+  background-color: rgb(158, 158, 158);
+}
+ 
+
+
 
 .table
 {
@@ -372,4 +383,25 @@ p{
   left: 17%;
   color: lightgray;
   font-size: 100%;
+}
+
+.mercado-pago{
+  position: fixed;
+  top: 20%;
+  left: 55%;
+  width: 40%;
+
+}
+
+.mercado-texto{
+  position: fixed;
+  top: 50%;
+  left: 65%;
+  font-size: 120%;
+  width:15% ;
+  color: white;
+  background-color: black;
+ /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px, rgb(0, 0, 0) 0px 0px 0px 2px;*/
+ box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+  z-index: 1;
 }
