--- a/Prode/frontend/prode-app/assets/resultados/style.css
+++ b/Prode/frontend/prode-app/assets/resultados/style.css
@@ -6,55 +6,52 @@ a> :hover,a:hover{
 #active{
   background-color: rgb(158, 158, 158);
 }
- 
+#ref-registro:hover{
 
+    background: #601e1e;
 
+}  
 
-.table
-{
-  
-  width:100%;
-  font-size:1em;
-    zoom: 1.0;
-    text-align: center;
-    font-style: italic;
-    -ms-text-combine-horizontal: all;
-   
-    color: aliceblue;
-    background-color: #601e1e;
-   
-    
-}
-.container{
-  position: absolute;
-  left: 100cm;
-  margin-left: 50%;
-  margin-right: 50%;
-}
-#jornada1{
-  
-  display: block;
-  top: 0cm;
-  left: 10cm;
-}
-
-#jornada2{
-  display: block;
-  position: absolute;
-  top: 0cm;
-  left: 70%;
-}
-#jornada3{
-  position: absolute;
- left: 39%;
-  
-}
 #boton-prode{
-
-  position: absolute;
-  margin-left: 39%;
-  top: 110cm;
+  display: block;
+  margin-left:40%;
+  
 }
+
+
+/* Prueba efecto fondo MAIN */
+.bg {
+  animation:slide 3s ease-in-out infinite alternate;
+  background-image: linear-gradient(-60deg,#601e1e 50%, #331010 50%);
+  bottom:0;
+  left:-50%;
+  opacity:.5;
+  position:fixed;
+  right:-50%;
+  top:0;
+  z-index:-1;
+}
+
+.bg2 {
+  animation-direction:alternate-reverse;
+  animation-duration:3s;
+}
+
+.bg3 {
+  animation-duration:3s;
+}
+@keyframes slide {
+  0% {
+    transform:translateX(-25%);
+  }
+  100% {
+    transform:translateX(25%);
+  }
+}
+
+/* Fin Efecto MAIN */
+
+
 
 
 
@@ -404,4 +401,128 @@ p{
  /* box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 2px, rgb(0, 0, 0) 0px 0px 0px 2px;*/
  box-shadow: rgba(0, 0, 0, 0.4) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
   z-index: 1;
+}
+
+
+
+/* Efecto fondo RESULTADOS */
+.area{
+ 
+  
+ 
+}
+
+.circles{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.circles li{
+  position: absolute;
+  display: block;
+  list-style: none;
+  width: 20px;
+  height: 20px;
+  background: rgba(255, 255, 255, 0.2);
+  animation: animate 25s linear infinite;
+  bottom: -150px;
+  
+}
+
+.circles li:nth-child(1){
+  left: 25%;
+  width: 80px;
+  height: 80px;
+  animation-delay: 0s;
+}
+
+
+.circles li:nth-child(2){
+  left: 10%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 2s;
+  animation-duration: 10s;
+}
+
+.circles li:nth-child(3){
+  left: 70%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(4){
+  left: 40%;
+  width: 60px;
+  height: 60px;
+  animation-delay: 0s;
+  animation-duration: 12s;
+}
+
+.circles li:nth-child(5){
+  left: 65%;
+  width: 20px;
+  height: 20px;
+  animation-delay: 0s;
+}
+
+.circles li:nth-child(6){
+  left: 75%;
+  width: 110px;
+  height: 110px;
+  animation-delay: 3s;
+}
+
+.circles li:nth-child(7){
+  left: 35%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 7s;
+}
+
+.circles li:nth-child(8){
+  left: 50%;
+  width: 25px;
+  height: 25px;
+  animation-delay: 15s;
+  animation-duration: 50s;
+}
+
+.circles li:nth-child(9){
+  left: 20%;
+  width: 15px;
+  height: 15px;
+  animation-delay: 2s;
+  animation-duration: 35s;
+}
+
+.circles li:nth-child(10){
+  left: 85%;
+  width: 150px;
+  height: 150px;
+  animation-delay: 0s;
+  animation-duration: 11s;
+}
+
+
+
+@keyframes animate {
+
+  0%{
+      transform: translateY(0) rotate(0deg);
+      opacity: 1;
+      border-radius: 0;
+  }
+
+  100%{
+      transform: translateY(-1000px) rotate(720deg);
+      opacity: 0;
+      border-radius: 50%;
+  }
+
 }
